--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="PopularPeople">Popular People</string>
     <string name="title_activity_search">Search</string>
+    <string name="title_activity_person">PersonActivity</string>
 </resources>
